#1 Intoduce gradle build based on current standards (buildSrc, pluginManagement, convention plugins)
see https://docs.gradle.org/current/userguide/organizing_gradle_projects.html
see https://docs.gradle.org/current/userguide/multi_project_builds.html